# Steinkraft

./: .gitignore  Android.cpp  BlockPos.cpp  BlockPos.hpp  CMakeLists.txt  CMakePresets.json  Constants.h  Entity.hpp  InputMethods.cpp  InputMethods.hpp  Main.cpp  Movement.cpp  Movement.hpp  README.md  RandomTexts.hpp  StdAfx.h  Terrain.cpp  Terrain.hpp  TranslatedStrs.hpp  VisibleFaces.hpp  stb_image.c  vcpkg.json
Framework/: Camera.cpp  Camera.hpp  IndexedMesh.cpp  IndexedMesh.hpp  LightSource.cpp  LightSource.hpp  Mesh.cpp  Mesh.hpp  Observable.hpp  PGL.h  Rect.cpp  Rect.hpp  Singleton.hpp  SpriteBatch.cpp  SpriteBatch.hpp  State.cpp  State.hpp  Texture.cpp  Texture.hpp  Toggles.h  Utilities.cpp  Utilities.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexStorage.cpp  VertexStorage.hpp
Framework/Math/: Frustum.cpp  Frustum.hpp  Intersector.cpp  Intersector.hpp  Mat4x4.cpp  Mat4x4.hpp  Noise.cpp  Noise.hpp  Vector.cpp  Vector.hpp
Managers/: AnimalManager.cpp  AnimalManager.hpp  NetManager.cpp  NetManager.hpp  RailManager.cpp  RailManager.hpp  TNTManager.cpp  TNTManager.hpp
Rendering/: Animation.hpp  BlockExplAnim.cpp  BlockExplAnim.hpp  HudRenderer.cpp  HudRenderer.hpp  LandscapeRenderer.cpp  LandscapeRenderer.hpp
Rendering/Meshes/: BlockMesh.cpp  BlockMesh.hpp  ChunkMesh.cpp  ChunkMesh.hpp  CubeVertices.cpp  CubeVertices.hpp  EntityBatch.cpp  EntityBatch.hpp  QuadMesh.cpp  QuadMesh.hpp
Rendering/Voxelrenderer/: ChunkMeshRenderer.cpp  ChunkMeshRenderer.hpp  (+1 more)
States/: LandscapeScene.cpp  LandscapeScene.hpp  MenuState.cpp  MenuState.hpp  SplashState.cpp  SplashState.hpp
data/: texmap.tga
docker/: Dockerfile
(+8 files in other folders)
